policies/02-allow-backend-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-backend-dns
  namespace: backend
spec:
  endpointSelector:
    matchLabels:
      app: backend
  egress:
  - toServices:
    - k8sService:
        serviceName: kube-dns
        namespace: kube-system
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
