policies/11-allow-frontend-egress-to-backend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-frontend-egress-to-backend
  namespace: frontend
  annotations:
    gitops-test: "true"
spec:
  endpointSelector:
    matchLabels:
      app: frontend
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: backend
        app: backend
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
